environments/common/api-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plan-api-route
  labels:
    app: plan-api
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: simons-gateway
      namespace: envoy
  hostnames:
    - "api.plan.simonbrundin.com"
  rules:
    - backendRefs:
        - kind: Service
          name: plan-api-service
          port: 8080
